--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="adSense.js"></script>
+    
     <script>
       window._game_loading_timer = Date.now()
     </script>
